cluster/security/network-policies/testing/validation-pods/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-test
  labels:
    purpose: network-policy-testing
